<resources>
    <string name="app_name">SwantekPPointOfSale</string>
    <string name="new_item">New Item</string>
    <string name="new_order">New Order</string>
    <string name="action_settings">Settings</string>
    <string name="item">Item:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Unit Price:</string>
    <string name="total">Total</string>
    <string name="quantity_hint">1</string>
    <string name="quantity_default">1</string>
    <string name="unit_price_default">0.00</string>
    <string name="price_hint">$0.00</string>
</resources>
